added the swagger documentation.
